<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/form"
    tools:context=".FormFragment"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registo"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="25dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_nome"
            android:hint="@string/form_nome"
            android:textColorHint="@color/black"
            android:background="@color/greyis"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_cinema"
            android:hint="@string/form_cinema"
            android:textColorHint="@color/black"
            android:background="@color/greyis"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_avaliacao"
            android:hint="@string/form_avaliacao"
            android:textColorHint="@color/black"
            android:background="@color/greyis"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_data"
            android:hint="@string/form_data"
            android:textColorHint="@color/black"
            android:background="@color/greyis"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_observacoes"
            android:hint="@string/form_observacoes"
            android:textColorHint="@color/black"
            android:background="@color/greyis"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/f_submit"
            style="@android:style/Widget.Button"
            android:layout_marginTop="20dp"
            android:text="@string/submeter"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</LinearLayout>