<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details"
    tools:context=".DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/d_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/titulo_detalhes"
            android:textColor="#000"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/d_filme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:shadowColor="@color/greyis"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/d_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:shadowColor="@color/greyis"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/d_avaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:shadowColor="@color/greyis"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/d_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:shadowColor="@color/greyis"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/d_observacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:shadowColor="@color/greyis"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/d_edit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners2"
                android:clickable="true"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:shadowColor="@color/greyis"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="20"
                android:textColor="#000"
                android:textSize="20sp"
                android:focusable="true"
                android:text="@string/d_editar"
                app:drawableStartCompat="@drawable/icon_edit" />
            <TextView
                android:id="@+id/d_erase"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners2"
                android:clickable="true"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:shadowColor="@color/greyis"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="20"
                android:textColor="#000"
                android:textSize="20sp"
                android:focusable="true"
                android:text="@string/d_eliminar"
                app:drawableStartCompat="@drawable/icon_x" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>